--- a/deployment/tasks_common.yml
+++ b/deployment/tasks_common.yml
@@ -56,7 +56,7 @@
         
   - name: Install basic apt packages
     apt:
-      name: ['unattended-upgrades', 'git', 'imagemagick', 'xauth', 'xpra', 'monit', 'htop', 'unzip', 'zip', 'aptitude', 'mosh', 'python3-pip', 'qrencode', 'siege', 'libreoffice', 'libimage-exiftool-perl', 'mediainfo', 'ffmpeg']
+      name: ['unattended-upgrades', 'monit', 'git', 'imagemagick', 'xauth', 'xpra', 'htop', 'unzip', 'zip', 'aptitude', 'mosh', 'python3-pip', 'qrencode', 'siege', 'libreoffice', 'libimage-exiftool-perl', 'mediainfo', 'ffmpeg']
       state: present
 
   - name: Check if wkhtmltopdf is present
@@ -103,6 +103,8 @@
       dest: /etc/php/7.2/fpm/conf.d/99-mediaclue.ini
       owner: 'root'
       group: 'root'
+    notify:
+      - restart PHP
 
   
   #
@@ -153,12 +155,16 @@
       dest: /etc/monit/monitrc
       owner: 'root'
       group: 'root'
+    notify:
+      - restart monit
   - name: monit config for mediaclue
     template:
       src: files/monit_mediaclue.j2
       dest: /etc/monit/conf.d/mediaclue
       owner: 'root'
       group: 'root'
+    notify:
+      - restart monit
 
       
   #
