--- a/deployment/tasks_common_end.yml
+++ b/deployment/tasks_common_end.yml
@@ -1,16 +1,17 @@
-- name: PHP start
-  service:
-    name: php7.2-fpm
-    enabled: yes
-    state: restarted
+# - name: PHP start
+#   service:
+#     name: php7.2-fpm
+#     enabled: yes
+#     state: restarted
 
-- name: nginx start
-  service:
-    name: nginx
-    enabled: yes
-    state: restarted
+# - name: nginx start
+#   service:
+#     name: nginx
+#     enabled: yes
+#     state: restarted
 
-- name: monit start
-  service:
-    name: monit
-    state: started
+# - name: monit start
+#   service:
+#     name: monit
+#     state: started
+#     use: sysvinit
