--- a/deployment/tasks_common.yml
+++ b/deployment/tasks_common.yml
@@ -109,6 +109,7 @@
         - 'mediainfo'
         - 'ffmpeg'
         - 'figlet'
+        - 'cronic'
 
   - name: Check if wkhtmltopdf is present
     stat:
